--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </div>
     <p id="story-boarding-text">Screenplay :</p>
-    <p id="story-boarding-subtext">~ Here are some sample Screenplay that I have independently written 
+    <p id="story-boarding-subtext">~ Here is a sample Screenplay that I have independently written 
         ~ </p>
 
         <div class="project1">
