--- a/blogs.html
+++ b/blogs.html
@@ -332,7 +332,7 @@
   <div id="blog-thoughts-main">
     <div style="display: flex; margin-left: 250px;">
       <p id="coming-soon">Coming&nbsp;Soon</p>
-      <div class="container" style="margin-top: 22%;">
+      <div class="container" >
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
