--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
             <p id="box-title-profile">EXPERIENCE</p>
             <p id="experience-period">Feb 2023 - Present</p>
             <p id="experience-domain">Radio Jockey</p>
-            <p id="experience-company">0.8 mhz fm community radio JU</p>
+            <p id="experience-company">90.8 MHz fm community radio JU</p>
             <p id="experience-period">Jun 2023 - Jul 2023</p>
             <p id="experience-domain">Content Curator</p>
             <p id="experience-company">Team Everest NGO</p>
