--- a/blogs.html
+++ b/blogs.html
@@ -53,12 +53,12 @@
     <p id="nav-photograph" onclick="photographs()">Photography</p>
     <p id="nav-thought" onclick="thoughts()">Thoughts</p>
   </div>
-
-  <div id="blog-blogs-main">
-    <p class="blogs-headings-blog">Blogs</p>
-    <div class="first-row-blog">
-      <div class="blogs">
-        <pre>
+  <div class="main">
+    <div id="blog-blogs-main">
+      <p class="blogs-headings-blog">Blogs</p>
+      <div class="first-row-blog">
+        <div class="blogs">
+          <pre>
 
   ✨🪄
   নেয়ামত যেদিন বিসমিল্লাহকে বলেছিল
@@ -112,9 +112,9 @@
   ~ অধিরাজ
 
         </pre>
-      </div>
-      <div class="blogs">
-        <pre>
+        </div>
+        <div class="blogs">
+          <pre>
 
   🏔🪻
   Of all the yellow cardamom days,
@@ -154,13 +154,13 @@
   ~ Adhiraj
 
         </pre>
-      </div>
+        </div>
 
 
 
-      <div class="blogs">
-<pre>
-  
+        <div class="blogs">
+          <pre>
+
   🕯🛶
   তোমায় চিনি আদিম প্রভু, প্রাচীন ভগবান।
   তোমার তরেই গেয়েছিল প্রথম জয়গান
@@ -189,12 +189,12 @@
 
 
 </pre>
-</div>
-    </div>
-    <div class="second-row-blog">
-      <div class="blogs">
-        <pre>
-  
+        </div>
+      </div>
+      <div class="second-row-blog">
+        <div class="blogs">
+          <pre>
+
   🌃🌑
   আলোর পিছে জমাট কালো
   সেই কালোতেই আগুন জ্বালো…
@@ -223,10 +223,10 @@
   ~ অধিরাজ
 
         </pre>
-      </div>
-      <div class="blogs">
-        <pre>
-  
+        </div>
+        <div class="blogs">
+          <pre>
+
   🍂🪸
   কি মায়াজাল হয় যে বোনা—
   দিনের শেষে চুপি চুপি 
@@ -251,10 +251,10 @@
   ~ অধিরাজ
 
         </pre>
-      </div>
-      <div class="blogs">
-        <pre>
-  
+        </div>
+        <div class="blogs">
+          <pre>
+
   🍃⚖
   গল্পগুলো যাচ্ছে শোনা—
   __________________________________
@@ -299,52 +299,53 @@
   ~ অধিরাজ
 
         </pre>
+        </div>
       </div>
-    </div>
-    <!-- <div class="third-row-blog">
+      <!-- <div class="third-row-blog">
       <div class="blogs"></div>
       <div class="blogs"></div>
       <div class="blogs"></div>
     </div> -->
-  </div>
-  <div id="blog-photographs-main">
-    <p class="blogs-headings">Photography</p>
-    <p class="photography-tagline">Magic lies in the eyes of the beholder. Here's a quick glimpse of how I look, watch,
-      notice and observe the amazing pale blue dot I live in.… :D !!</p>
+    </div>
+    <div id="blog-photographs-main">
+      <p class="blogs-headings">Photography</p>
+      <p class="photography-tagline">Magic lies in the eyes of the beholder. Here's a quick glimpse of how I look,
+        watch,
+        notice and observe the amazing pale blue dot I live in.… :D !!</p>
 
-    <div class="first-row-photography">
-      <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_1.jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_2.jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_3.jpg" alt="" srcset=""></div>
-    </div>
-    <div class="second-row-photography">
-      <div class="images"><img src="images/photography/IMG_20240108_171622 (1).jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/IMG_20240111_220253 (1).jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/IMG_20240111_224619 (1).jpg" alt="" srcset=""></div>
-    </div>
-    <div class="third-row-photography">
-      <div class="images"><img src="images/photography/IMG_20240115_162415.jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/IMG_20240115_163823.jpg" alt="" srcset=""></div>
-      <div class="images"><img src="images/photography/IMG_20240116_194256.jpg" alt="" srcset=""></div>
-    </div>
-
-  </div>
-  <div id="blog-thoughts-main">
-    <div style="display: flex; margin-left: 250px;">
-      <p id="coming-soon">Coming&nbsp;Soon</p>
-      <div class="container" >
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
+      <div class="first-row-photography">
+        <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_1.jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_2.jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/Adhiraj Chakrabarti_photo_3.jpg" alt="" srcset=""></div>
       </div>
+      <div class="second-row-photography">
+        <div class="images"><img src="images/photography/IMG_20240108_171622 (1).jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/IMG_20240111_220253 (1).jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/IMG_20240111_224619 (1).jpg" alt="" srcset=""></div>
+      </div>
+      <div class="third-row-photography">
+        <div class="images"><img src="images/photography/IMG_20240115_162415.jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/IMG_20240115_163823.jpg" alt="" srcset=""></div>
+        <div class="images"><img src="images/photography/IMG_20240116_194256.jpg" alt="" srcset=""></div>
+      </div>
+
     </div>
+    <div id="blog-thoughts-main">
+      <div style="display: flex; margin-left: 250px;">
+        <p id="coming-soon">Coming&nbsp;Soon</p>
+        <div class="container">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
 
+    </div>
   </div>
-
-  <footer id="footer">
-    <p>© All rights reserved by Adhiraj Chakrabarti</p>
-  </footer>
-  <script src="main.js"></script>
+    <footer id="footer">
+      <p>© All rights reserved by Adhiraj Chakrabarti</p>
+    </footer>
+    <script src="main.js"></script>
 
 </body>
 
