--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
             <p id="box-title-profile">EXPERIENCE</p>
             <p id="experience-period">Feb 2023 - Present</p>
             <p id="experience-domain">Radio Jockey</p>
-            <p id="experience-company"> Community Radio JU 90.8 MHz </p>
+            <p id="experience-company">0.8 mhz fm community radio JU</p>
             <p id="experience-period">Jun 2023 - Jul 2023</p>
             <p id="experience-domain">Content Curator</p>
             <p id="experience-company">Team Everest NGO</p>
@@ -97,7 +97,103 @@
 
     <script src="main.js"></script>
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="style.css">
+    <title>Adhiraj Chakrabarti</title>
+</head>
+
+<body>
+
+    <nav class="nav-bar-profile">
+        <img src="images/logo.png" alt="" srcset="" class="logo">
+       
+            <a href="index.html" style="text-decoration: none">
+                <p class="home">Home</p>
+            </a>
+            <a href="credentials.html" style="text-decoration: none;">
+                <p class="about">About</p>
+            </a>
+            <a href="project.html" style="text-decoration: none;">
+                <p class="works">Works</p>
+            </a>
+            <a href="contact.html" style="text-decoration: none;">
+                <p class="contact">Contact</p>
+            </a>
+     
+        <button class="lets-talk">Let's talk</button>
+    </nav>
+    <img src="images/settings.png" alt="" srcset="" id="hambarger1" onclick="menu()">
+
+
+    <div id="hambargarmenu">
+        <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+        <img src="images/logo.png" alt="" srcset="" class="logo">
+        <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+        <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+        <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+        <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+        <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
+      </div>
+    <div class="first-row-profile">
+        <div class="profile-photo">
+            <img src="images/profile-picture.jpg" id="profile-photo">
+        </div>
+        <p id="self-summary">SELF-SUMMARY</p>
+        <div class="summary">
+            <img src="images/icon2.png" id="icon2">
+            <p id="full-name-profile"> Adhiraj Chakrabarti</p>
+            <p id="name-description-profile">I'm all about creating content that sparks imagination and inspires action.
+                From engaging videos to thought-provoking blogs, I'm here to blend creativity with authenticity and take
+                you on a journey of exploration and inspiration. Let's discover the power of storytelling together!</p>
+        </div>
+    </div>
+    <div class="second-row-profile">
+        <div class="experience-profile">
+            <p id="box-title-profile">EXPERIENCE</p>
+            <p id="experience-period">Feb 2023 - Present</p>
+            <p id="experience-domain">Radio Jockey</p>
+            <p id="experience-company">0.8 mhz fm community radio JU</p>
+            <p id="experience-period">Jun 2023 - Jul 2023</p>
+            <p id="experience-domain">Content Curator</p>
+            <p id="experience-company">Team Everest NGO</p>
+            <p id="experience-period">Sep 2021 - Nov 2021</p>
+            <p id="experience-domain">Published Author</p>
+            <p id="experience-company">Spread Those Inks</p>
+            <p id="experience-period">Nov 2020 - Dec 2020</p>
+            <p id="experience-domain">Digital Marketing Intern</p>
+            <p id="experience-company">knowledge Plus</p>
 
 
 
+        </div>
+        <div class="education-profile">
+            <p id="box-title-profile">EDUCATION</p>
+            <p id="education-period">2022 - Present</p>
+            <p id="education-company">St. Xavier's College (Autonomous), Kolkata</p>
+            <p id="education-domain">Bachelor of Science, Mass Communication and videoography</p>
+            <p id="education-period">2009 - 2022</p>
+            <p id="education-company">St. Xavier's Institution</p>
+            <p id="education-domain">High School Diploma, Humanities/Humanistic Studies</p>
+
+        </div>
+
+        <div class="connect-profile">
+            <img src="images/icon2.png"
+            id="icon2">
+            <p id="lets-work-profile">Let's <p id="lets-work-profile">work <b style="color: #5B78f6;;">together.</b></p> </p>
+            <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon5"></a>
+        </div>
+
+    </div>
+    <footer>
+       <p>.</p>
+    </footer>
+
+    <script src="main.js"></script>
+</body>
 </html>
