--- a/services.html
+++ b/services.html
@@ -48,6 +48,7 @@
         </a>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </div>
+
     <div class="first-row-services">
         <div class="left-service">
             <img src="images/content-writing.png" id="services-images-1">
@@ -92,48 +93,49 @@
             </div>
 
         </div>
-      </div>  
-            <div class="credentials-services">
-                <img src="images/signature.png" id="signature-services">
-                <p id="details-services">MORE ABOUT ME</p>
-                <p id="title-services">Credentials</p>
-                <a href="credentials.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon6"></a>
-            </div>
-            <div>
-                <div class="connect-services">
-                    <img src="images/icon2.png" id="icon2-services-page">
-                    <p id="lets-work-services">Let's
-                    <p id="lets-work-services">work <b style=" color: #5B78f6;;">together.</b></p>
-                    </p>
-                    <a href="contact.html"><img src="images/icon.svg" alt="" srcset=""
-                            id="detail-icon4-service-page"></a>
+    </div>
 
-                </div>
-                <div class="social-profiles-services-service-page">
-                    <div class="profile-box-services-service-page">
-                        <div class="social-icons-services-service-page">
-                            <a href="https://www.instagram.com/theway_isaw/">
-                                <div class="social-service-page"> <img src="images/Instagram.png" id="instagram-icon">
-                                </div>
-                            </a>
-                            <a href="https://www.linkedin.com/in/adhiraj-chakrabarti-0934172a3/">
-                                <div class="social-service-page"> <img src="images/linkedin.png" id="linkedin-icon">
-                                </div>
-                            </a>
+    <div class="second-row-services">
+        <div class="credentials-services">
+            <img src="images/signature.png" id="signature-services">
+            <p id="details-services">MORE ABOUT ME</p>
+            <p id="title-services">Credentials</p>
+            <a href="credentials.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon6"></a>
+        </div>
+        <div class="connect-services">
+            <img src="images/icon2.png" id="icon2-services-page">
+            <p id="lets-work-services">Let's
+            <p id="lets-work-services">work <b style=" color: #5B78f6;;">together.</b></p>
+            </p>
+            <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon4-service-page"></a>
+
+        </div>
+
+        <div class="social-profiles-services-service-page">
+            <div class="profile-box-services-service-page">
+                <div class="social-icons-services-service-page">
+                    <a href="https://www.instagram.com/theway_isaw/">
+                        <div class="social-service-page"> <img src="images/Instagram.png" id="instagram-icon">
                         </div>
-
-                    </div>
-                    <p id="details-service-page">STAY WITH ME</p>
-                    <p id="title-service-page">Profiles</p>
-                    <a href="contact.html"><img src="images/icon.svg" alt="" srcset=""
-                            id="detail-icon2-service-page"></a>
+                    </a>
+                    <a href="https://www.linkedin.com/in/adhiraj-chakrabarti-0934172a3/">
+                        <div class="social-service-page"> <img src="images/linkedin.png" id="linkedin-icon">
+                        </div>
+                    </a>
                 </div>
-       
-            <div class="extra2"></div>
-            <footer>
-                <p id="footer-services">© All rights reserved by Adhiraj Chakrabarti</p>
-            </footer>
-            <script src="main.js"></script>
+
+            </div>
+            <p id="details-service-page">STAY WITH ME</p>
+            <p id="title-service-page">Profiles</p>
+            <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2-service-page"></a>
+        </div>
+    </div>
+    <div class="extra2"></div>
+
+    <footer>
+        <p id="footer-services">© All rights reserved by Adhiraj Chakrabarti</p>
+    </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
