--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
         </a>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </div>
-    <div class="main">
+    <div class="main-project">
         <p id="story-boarding-text">Screenplay :</p>
         <p id="story-boarding-subtext">~ Here are some sample Screenplay that I have independently written
             ~ </p>
@@ -209,9 +209,9 @@
         </div>
     </div> -->
     </div>
-    <footer style="padding-bottom: 20px; margin-top:350px;">
+    <!-- <footer style="padding-bottom: 20px; margin-top:350px;">
         <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
-    </footer>
+    </footer> -->
     <script src="main.js"></script>
 
 </body>
