--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
     <a href="index.html" style="text-decoration: none">
       <p class="home">Home</p>
     </a>
-    <a href="credentials.html" style="text-decoration: none;">
+    <a href="about.html" style="text-decoration: none;">
       <p class="about">About</p>
     </a>
     <a href="project.html" style="text-decoration: none;">
@@ -37,7 +37,7 @@
     <a href="index.html" style="text-decoration: none">
       <p id="home" onclick="closemenu()">Home</p>
     </a>
-    <a href="credentials.html" style="text-decoration: none">
+    <a href="about.html" style="text-decoration: none">
       <p id="about" onclick="closemenu()">About</p>
     </a>
     <a href="project.html" style="text-decoration: none">
