--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html" style="text-decoration: none">
             <p class="home">Home</p>
         </a>
-        <a href="credentials.html" style="text-decoration: none;">
+        <a href="about.html" style="text-decoration: none;">
             <p class="about">About</p>
         </a>
         <a href="project.html" style="text-decoration: none;">
@@ -37,7 +37,7 @@
         <a href="index.html" style="text-decoration: none">
             <p id="home" onclick="closemenu()">Home</p>
         </a>
-        <a href="credentials.html" style="text-decoration: none">
+        <a href="about.html" style="text-decoration: none">
             <p id="about" onclick="closemenu()">About</p>
         </a>
         <a href="project.html" style="text-decoration: none">
@@ -71,7 +71,7 @@
                 <img src="images/signature.png" id="signature">
                 <p id="details">MORE ABOUT ME</p>
                 <p id="title">Credentials</p>
-                <a href="credentials.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
+                <a href="about.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
             </div>
             <div class="blog">
                 <img src="images/blogs.png" id="blog-image">
