--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
             <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
-            <a href="credentials.html" style="text-decoration: none;">
+            <a href="about.html" style="text-decoration: none;">
                 <p class="about">About</p>
             </a>
             <a href="project.html" style="text-decoration: none;">
@@ -35,7 +35,7 @@
         <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
         <img src="images/logo.png" alt="" srcset="" class="logo">
         <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-        <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+        <a href="about.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
         <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
         <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
