--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
         <a href="index.html" style="text-decoration: none">
             <p class="home">Home</p>
         </a>
-        <a href="credentials.html" style="text-decoration: none;">
+        <a href="about.html" style="text-decoration: none;">
             <p class="about">About</p>
         </a>
         <a href="project.html" style="text-decoration: none;">
@@ -37,7 +37,7 @@
         <a href="index.html" style="text-decoration: none">
             <p id="home" onclick="closemenu()">Home</p>
         </a>
-        <a href="credentials.html" style="text-decoration: none">
+        <a href="about.html" style="text-decoration: none">
             <p id="about" onclick="closemenu()">About</p>
         </a>
         <a href="project.html" style="text-decoration: none">
@@ -100,7 +100,7 @@
             <img src="images/signature.png" id="signature-services">
             <p id="details-services">MORE ABOUT ME</p>
             <p id="title-services">Credentials</p>
-            <a href="credentials.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon6"></a>
+            <a href="about.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon6"></a>
         </div>
         <div class="connect-services">
             <img src="images/icon2.png" id="icon2-services-page">
